# Voice-Translation

./: .gitignore  README.md  dockerfile  pyproject.toml
src/: assistant.py  interface.py  main.py  recorder.py  speaker.py  transcriber.py  translation.py
src/config/: conf.py  utils.py
